--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: "Hi, I'm Noam Stanislawski."
 email: 'noamstanislawski@gmail.com'
-description: "Rising Junior Computer Science major at the College of William & Mary."
+description: "I am a rising 3rd year Computer Science major at the College of William & Mary."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://noamstanis.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 twitter_username: 'noamstan'
@@ -89,9 +89,9 @@ pagination:
 ############################################################
 
 ### Phantom settings
-footer_text: '© 2018 Jami Gibbs'
-admin_name: 'Jami Gibbs'
-google_analytics: "UA-9999999-99" # Update with your own tracking ID
+footer_text: '© 2021 Noam Stanislawski'
+admin_name: 'Noam Stanislawski'
+google_analytics: "UA-9310164-47" # Update with your own tracking ID
 enable_contact: false
 
 #### Phantom Navigation menu
