--- a/_config.yml
+++ b/_config.yml
@@ -98,4 +98,4 @@ enable_contact: true
 enable_nav: true
 nav_item:
   - { url: '/', text: 'Home' }
-  - { url: '/about', text: 'About' }
+  - { url: '/', text: 'Resume'}
