Forgot .pdf on the link, now its there

--- a/_config.yml
+++ b/_config.yml
@@ -98,4 +98,4 @@ enable_contact: true
 enable_nav: true
 nav_item:
   - { url: '/', text: 'Home' }
-  - { url: '/pdfs/resume', text: 'Resume'}
+  - { url: '/pdfs/resume.pdf', text: 'Resume'}
