--- a/_config.yml
+++ b/_config.yml
@@ -99,4 +99,4 @@ enable_nav: true
 nav_item:
   - { url: '/', text: 'Home' }
   - { url: '/pdfs/resume.pdf', text: 'Resume'}
-  - { url: '/about', text: 'About'} 
+  - { url: '/projects', text: 'Projects'} 
